fixing social links bug on mobile

--- a/assets/sass/elements/social-media-links.scss
+++ b/assets/sass/elements/social-media-links.scss
@@ -10,9 +10,13 @@
     }
 
     #menu &{
-        margin-top: 40px;
-        display: flex;
-        justify-content: center;
+
+        @media(max-width: 420px) {
+            margin-top: 40px;
+            display: flex;
+            justify-content: center;
+        }
+
     }
 
     @extend %social-media;
